Criando sistema de validação de CPF na inclusão e alteração de clientes

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Index.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Index.cshtml
@@ -5,7 +5,7 @@
 @section scripts{
 <script>
     var urlAlteracao = '@Url.Action("Alterar", "Cliente", new { area = "" })';
-    var urlClienteList = '@Url.Action("ClienteList", "Cliente", new { area = "" })';
+    var urlClienteList = '@Url.Action("ListarClientes", "Cliente", new { area = "" })';
 
 </script>
     @Scripts.Render("~/bundles/listClientes")
