--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Forms.cshtml
@@ -1,20 +1,21 @@
-﻿<form id="formCadastroBeneficiario" method="post">
+﻿@model WebAtividadeEntrevista.Models.BeneficiarioModel
+<form id="formCadastroBeneficiario" method="post">
     <div class="row align-bottom">
         <div class="col-md-5">
             <div class="form-group">
-                <label for="CPFBeneficiario">CPF:</label>
-                <input required="required" type="text" class="form-control" id="CPFBeneficiario" name="CPFBeneficiario" placeholder="Ex.: 999.999.999-99" maxlength="255">
+                @Html.LabelFor(m => m.CPF)
+                @Html.TextBoxFor(m => m.CPF, new { placeholder = "Ex.: 999.999.999-99", @class = "form-control", id = "CPFBeneficiario", name = "CPFBeneficiario" })
             </div>
         </div>
         <div class="col-md-5">
             <div class="form-group">
-                <label for="NomeBeneficiario">Nome:</label>
-                <input required="required" type="text" class="form-control" id="NomeBeneficiario" name="NomeBeneficiario" placeholder="Ex.: João" maxlength="50">
+                @Html.LabelFor(m => m.Nome)
+                @Html.TextBoxFor(m => m.Nome, new { placeholder = "Ex.: João", @class = "form-control", id = "NomeBeneficiario", name = "NomeBeneficiario" })
             </div>
         </div>
         <div class="col-lg-2">
             <div class="form-group">
-                <button type="button" class="btn btn-sm btn-success">Incluir</button>
+                <button type="button" class="btn btn-sm btn-success" id="btn-incluir-beneficiario">Incluir</button>
             </div>
         </div>
     </div>
