--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
@@ -1,7 +1,10 @@
-﻿@model WebAtividadeEntrevista.Models.BeneficiarioModel
+﻿@model WebAtividadeEntrevista.Models.BeneficiarioModalModel
 @{
     ViewBag.Title = "Beneficiários";
 }
+<script>
+    var beneficiariosExistentes = @Html.Raw(Json.Encode(Model.Beneficiarios.ToArray()));
+</script>
 
 <div class="modal" id="modalBeneficiarios" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
@@ -13,7 +16,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                @Html.Partial("../Beneficiario/Forms", Model)
+                @Html.Partial("../Beneficiario/Forms", Model.Beneficiario)
 
                 <table class="table table-striped" id="gridBeneficiarios">
                     <thead>
