--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Forms.cshtml
@@ -1,23 +1,21 @@
 ﻿@model WebAtividadeEntrevista.Models.BeneficiarioModel
 
 <form id="formCadastroBeneficiario" method="post">
-    <div class="row align-bottom">
-        <div class="col-md-5">
+    <div class="row">
+        <div class="col-sm-5">
             <div class="form-group">
                 @Html.LabelFor(m => m.CPF)
                 @Html.TextBoxFor(m => m.CPF, new { placeholder = "Ex.: 999.999.999-99", @class = "form-control", id = "CPFBeneficiario", name = "CPFBeneficiario" })
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-sm-5">
             <div class="form-group">
                 @Html.LabelFor(m => m.Nome)
                 @Html.TextBoxFor(m => m.Nome, new { placeholder = "Ex.: João", @class = "form-control", id = "NomeBeneficiario", name = "NomeBeneficiario" })
             </div>
         </div>
-        <div class="col-lg-2">
-            <div class="form-group">
-                <button type="button" class="btn btn-sm btn-success" id="btn-incluir-beneficiario">Incluir</button>
-            </div>
+        <div class="col-sm-2 d-flex">
+            <button type="button" class="btn btn-sm btn-success" style="margin-top: 40%;" id="btn-incluir-beneficiario">Incluir</button>
         </div>
     </div>
 </form>
