Implementando visualmente a edição de beneficiários

--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Forms.cshtml
@@ -1,6 +1,7 @@
 ﻿@model WebAtividadeEntrevista.Models.BeneficiarioModel
 
 <form id="formCadastroBeneficiario" method="post">
+    <input type="hidden" id="IdBeneficiario" value="" />
     <div class="row">
         <div class="col-sm-5">
             <div class="form-group">
