--- a/FI.WebAtividadeEntrevista/Views/Cliente/Index.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Index.cshtml
@@ -12,4 +12,4 @@
 }
 <h2>@Html.Raw(ViewBag.Title)</h2>
 @Html.ActionLink("Novo Cliente", "Incluir", "Cliente", new { }, new { @class= "btn btn-sm btn-primary pull-right" })
-<table id="gridClientes" class="table"></table>
+<table id="gridClientes" class="table" style="margin-top: 50px"></table>
